fixed css and spacing for expereince section

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ ul {
 
 
 #skills .col-md-6{
-  padding:0px;
+  padding:0px 20px 0px 0px;
 }
 
 
